[package]
name = "ytdl-server"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[dependencies]
ytdl-lib = { path = "../ytdl-lib" }
reqwest = "0.10.7"
serde = "1.0.82"
serde_json = "1.0.33"
serde_derive = "1.0.82"
json = "0.11.13"
failure = "0.1.3"
failure_derive = "0.1.3"
log = "0.4.6"
env_logger = "0.6.0"
hyper = "0.13.7"
futures = "0.3"
url = "2.1.1"
regex = "1.1.0"
lazy_static = "1.2.0"
tokio = { version =  "0.2.22", features = ["full"] }
